mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/storageLayoutSpecifier/string.sol
contract C layout at "MyLayoutBase" {}
// ----
// TypeError 1763: (21-35): The base slot of the storage layout must evaluate to an integer.
